src/components/InventoryList/InventoryList.scss
@import "../../styles/variables";
@import "../../styles/mixin";
@import "../../styles/fonts";

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Titillium Web";
}

@mixin phone() {
  @media all and (max-width: 767px) {
    @content;
  }
}

@include phone {
  .inventorypage_card_header.card__header {
    flex-direction: column;
    align-items: flex-start;
  }

  .inventorypage__margintop {
    margin-top: 1rem;
  }

  .inventorypage__gapchange.card__list-content {
    gap: 3rem;
  }
}

@include tablet {
  .inventorypage__btn__style.btn__style {
    width: 100%;
    padding: 0.7rem 1rem;
  }

  .inventorypage__card_container.card__container {
    gap: 1rem;
  }

  .inventorypage__heading.card-table__heading {
    white-space: nowrap;
  }

  .inventory__card__list.card__list {
    // justify-content: space-between;
    padding: 0 1rem;
  }

  .inventorypage__actions {
    padding-left: 2rem;
  }
}

.card {
  background-color: $Light-Grey;
  width: 100vw;
  height: 100vh;

  &__bgBlue {
    background-color: $Graphite;
    height: 4em;
    margin: 0;
    padding: 0;
  }

  &__wrapper {
    background-color: $White;
    margin: 0 1rem;
    flex-grow: 1;
    box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
    border-radius: 0.2rem;
    position: absolute;
    top: 9rem;

    width: calc(100% - 2rem);

    @include tablet {
      top: 5.5rem;
    }
  }

  &__header {
    padding: 1rem 1rem 1.2rem 1rem;
    border-bottom: 1.5px solid $Cloud;

    @include tablet {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      border: none;
    }
  }

  &__header-title {
    // padding-top: 1rem;
    // font-size: 1.8rem;
    // font-weight: 600;
    font-family: "Titillium Web";
    font-style: normal;
    font-weight: 600;
    font-size: 28px;
    line-height: 36px;
  }

  &__container {
    display: flex;
    align-items: center;
    flex-direction: column;

    @include phone {
      width: 100%;
    }
    @include tablet {
      display: flex;
      flex-direction: row;
      gap: 2rem;
    }
  }

  &__searchBox {
    margin: 1rem 0;
    width: 100%;
    @include phone {
      display: flex;
      justify-content: flex-end;
    }
  }
  &__searchBox-input {
    position: relative;
    width: 100%;
    padding: 0.65rem 1rem;
    border: 1px solid $Cloud;
    border-radius: 2rem;

    &::-webkit-search-cancel-button {
      display: none;
    }

    @include phone {
      padding: 0.65rem 1rem;
    }

    @include tablet {
      width: 12rem;
    }
  }

  &__searchBox-img {
    position: absolute;
    right: 2.9rem;
    top: 5.4rem;

    @include tablet {
      right: 11.7rem;
      top: 2.6rem;
    }
  }

  &__list {
    list-style-type: none;
    border-bottom: 1.5px solid $Cloud;
    margin: 0 1rem;
    &:last-child {
      border: none;
    }

    @include tablet {
      display: flex;
      flex-direction: row;
    }
  }

  &__list-content {
    margin: 1rem;
    display: flex;
    gap: 5rem;
  }

  &__list-content-left,
  &__list-content-right {
    text-align: left;
    @include tablet {
      display: flex;
      flex-direction: row;
    }
  }

  &__list-content-left {
    @include tablet {
      width: 40%;
      display: flex;
      justify-content: space-between;
    }
  }
  &__list-content-right {
    @include tablet {
      width: 40%;
      display: flex;
      justify-content: space-between;
      // display: none;
    }
  }
  &__list-title {
    font-size: 0.7rem;
    text-transform: uppercase;
    color: #5c667e;
    margin-bottom: 0.7rem;

    @include tablet {
      display: none;
    }
  }

  &__product-item {
    display: flex;
    flex-direction: row;
    margin-bottom: 0.8rem;
    text-decoration: none;
    align-items: center;
  }

  &__list-text-item {
    font-size: 0.8rem;
    margin-bottom: 1.5rem;

    &--product {
      color: #2e66e5;
      font-weight: 600;
      margin: 0;
    }
    @include tablet {
      margin-top: 0.3rem;
      margin-bottom: 0;
    }
  }

  &__list-text-item-inStock {
    color: $Green;
    font-size: 0.8rem;
    text-transform: uppercase;
    font-weight: 600;
    background: rgba(21, 132, 99, 0.07);
    border-radius: 1rem;
    padding: 0.35rem 0.7rem;
    margin-bottom: 0.9rem;
    text-align: center;
  }

  &__list-text-item-outStock {
    color: $Red;
    font-size: 0.8rem;
    text-transform: uppercase;
    font-weight: 600;
    background: rgba(201, 69, 21, 0.07);
    border-radius: 1rem;
    padding: 0.35rem 0.7rem;
    margin-bottom: 0.9rem;
    text-align: center;
  }

  &__product-item_chevron {
    margin-top: 0.15rem;
  }

  &__list-actions {
    display: flex;
    justify-content: space-between;
    margin: 0 1rem 1.5rem 1rem;

    // @include tablet {
    //   display: none;
    // }
  }
}
.card-table {
  display: none;

  @include tablet {
    justify-content: space-around;
    background: rgba(247, 248, 249, 0.7);
    display: flex;
    flex-direction: row;
    font-size: 0.7rem;
    text-transform: uppercase;
    color: #5c667e;
    // padding: 0.5rem 0;
    padding: 0.9rem 2rem;
  }
  &__headings {
    display: flex;
    width: 100%;
    justify-content: space-between;
  }
  &__heading-wrapper {
    display: flex;
    gap: 0.4rem;
    align-items: center;
    // margin: 0 1rem;
    // width: 15%;
    margin-left: 1rem;
  }

  &__heading-button {
    border: none;
    background-color: transparent;
  }
}
.btn {
  border: none;
  width: 100%;

  &__style-link {
    text-decoration: none;

    @include phone {
      flex-grow: 1;
    }
  }

  &__style {
    font-size: 0.8rem;
    font-weight: 600;
    color: white;
    width: 100%;
    padding: 0.7rem 0rem;
    background-color: #2e66e5;
    align-items: center;
    border-radius: 2rem;
    border: none;
    transition: all 0.3s ease-out;

    @include tablet {
      width: 8rem;
    }
  }
}

